# flightsearchmcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/: __init__.py  aircraft.py  cache.py  config.py  executor.py  formatters.py  lifecycle.py  models.py  opensky_client.py  region.py  server.py  service.py
tests/: conftest.py  factory.py  helpers.py  test_aircraft.py  test_formatters.py  test_integration.py  test_region.py  test_service.py  test_tools.py
