[project]
name = "flightsearch-mcp"
version = "0.2.0"
description = "Standalone MCP server for live aircraft search via OpenSky Network"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.0",
    "mcp>=1.6.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
flightsearch-mcp = "flightsearch_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: live OpenSky network tests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flightsearch_mcp"]

[tool.hatch.build.targets.wheel.force-include]
"src" = "flightsearch_mcp"
